# AILabs_S1_CryptoStrat

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/src/: main.py
backend/src/ailabs_crypto/: __init__.py
backend/tests/contract/: test_candles_contract.py  test_market_summary_contract.py  test_market_websocket_contract.py  test_no_trading_routes.py
backend/tests/unit/: test_audit_events.py  test_backfill.py  test_candle_service.py  test_coinbase_product_parser.py  test_connection_state.py  test_intervals.py
docs/: ROADMAP.md
frontend/: index.html  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/charts/: LightweightCandlestickChart.tsx  chartData.ts
frontend/src/components/: CandleReadout.tsx  ConnectionStatus.tsx  IntervalSelector.tsx  MarketModeBanner.tsx  MarketTile.tsx  MarketTileGrid.tsx
frontend/src/services/: apiClient.ts  candleService.ts  contracts.ts  marketSocket.ts
frontend/src/state/: intervals.ts  marketEvents.ts  marketStore.ts
frontend/src/styles/: base.css  chart.css  dashboard.css
frontend/tests/: setup.ts
frontend/tests/e2e/: candlestickChart.spec.ts  (+4 more)
specs/001-market-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+26 files in other folders)
