[project]
name = "ailabs-s1-cryptostrat"
version = "0.1.0"
description = "A real-time crypto trading dashboard built end-to-end with AI as a thinking partner."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
